# SuperconductivityElectronLiquids.gaia

./: .gitignore  ANALYSIS.md  README.md  pyproject.toml  references.json
.gaia/: beliefs.json  compile_metadata.json  ir.json  ir_hash  review_manifest.json
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
.github-output/: README.md  manifest.json  narrative-outline.md
.github-output/docs/src/: types.ts
.github-output/wiki/: Home.md  Inference-Results.md  Module-motivation.md  Module-s2-model.md  Module-s3-downfolding.md  Module-s4-pseudopotential.md  Module-s5-eph-coupling.md  Module-s6-superconductors.md
artifacts/arxiv_source/: 2512.19382.tar  2512.19382.txt
docs/: detailed-reasoning.md
docs/public/assets/: 2512.19382.md
docs/public/data/: beliefs.json
gaia-wiki/: _index.md  overview.md
gaia-wiki/.obsidian/: graph.json  workspace.json
gaia-wiki/claims/context/: 01 - BCS Theory.md  (+19 more)
gaia-wiki/meta/: beliefs.md  holes.md
gaia-wiki/sections/: 01 - Introduction Motivation and Background.md  02 - The Model and Basic Relations.md  03 - Downfolding the Bethe-Salpeter Equation.md  04 - Coulomb Pseudopotential.md  05 - Electron-Phonon Coupling.md  06 - Conventional Superconductors.md  07 - Weak Points.md  08 - Open Questions.md
src/superconductivity_electron_liquids/: __init__.py  motivation.py  priors.py  s2_model.py  s3_downfolding.py  s4_pseudopotential.py  s5_eph_coupling.py  s6_superconductors.py  v6_actions.py
tests/: test_li_uncertainty_model.py
wiki/: Home.md  Module-s5-eph-coupling.md  Module-s6-superconductors.md
(+50 files in other folders)
