[project]
name = "superconductivity-electron-liquids-gaia"
version = "1.0.0"
description = "Gaia knowledge package: Superconductivity in Electron Liquids (arXiv:2512.19382)"
readme = "README.md"
authors = [
    { name = "kunchen", email = "chenkun0228@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["superconductivity_electron_liquids*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.gaia]
namespace = "github"
type = "knowledge-package"
uuid = "630d53a1-77e0-4ee5-bd2d-ca586926c43a"
